word matching continues and testing